fix: fix gaps

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,8 +2,7 @@
 
 .App {
   background-color: $clr-dark;
-  height: 100vh;
-
+  min-height: 100vh;
   .app-container {
     padding: 0.5em;
     height: 100%;
@@ -12,7 +11,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     gap: 0.5em;
   }
 
