--- a/src/scss/Today.scss
+++ b/src/scss/Today.scss
@@ -3,7 +3,8 @@
 .Today {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 1em;
   height: 100%;
 
   .city-date-time-wrapper {
